--- a/rem_aya_2/changelog.txt
+++ b/rem_aya_2/changelog.txt
@@ -1,6 +1,11 @@
 # 2024/21/04
  * HATEOAS tests.  
- *  some methods made to shorten code assertions on those tests. Cool, but i think i'll no do this again. Because if i have a fail,
- *  need to "unclean" putting it again on top to see which line is not asserting.
- *  Keep each assertion in each method might be faster than debug always that i have an assert error.
+  * some methods made to shorten code assertions on those tests. Cool, but i think i'll no do this again. Because if i have a fail,
+  * need to "unclean" putting it again on top to see which line is not asserting.
+  * Keep each assertion in each method might be faster than debug always that i have an assert error.
  
+ 
+ #2024/02/04
+ * StackOverFlowError
+  * don't ever trust in auto-complete, nah...
+  * it made a cycle calling in set methods
