--- a/rem_aya_2/changelog.txt
+++ b/rem_aya_2/changelog.txt
@@ -7,8 +7,13 @@
 #2024/02/04
  * StackOverFlowError
   * don't ever trust in auto-complete, nah...
-  * it made a recursive calling in overrided methods
+  * it made a recursive calling in overrided methods.
 
 #04/02/2024
  *for some reason, when created PlantControllerTestCORS , the webEnvironment was not the same used in other classes (like SwaggerIntegrationTest)
  *so, copy SwaggerIntegrationTests and did the necessary changes on code to turn into desired class and fix it.
+ 
+ #06/02/2024
+  *when used @XmlRootElement to map object TokenVO into tests, it was no being mapped and deserealized by XmlMapper.
+   *now (in Jdk21 and SpringBoot 3.2.1) I'd found that is necessary to pass a name to fix it.
+   *so make the line of annotation @XmlRootElement(name = "TokenVO").
